# insta

./: .gitignore  README.md  auto_follow.py  error.html  gui.py  helper.py  insta2.json  insta_login.py  main.py  main.spec  pyproject.toml  selen.py  send_dm.py  test19850802_follow_list.csv  test19850802_follower_list.csv
