[tool.poetry]
name = "insta-tool"
version = "1.3.1"
description = ""
authors = ["masaki-kuraya <masaki@kuraya.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
selenium-stealth = "^1.0.6"
pandas = "^2.2.1"
numpy = "^1.26.4"
pyarrow = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
